# vstream

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.wav.txt  test_transcription.sh
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  main.cpp  mainwindow.cpp  mainwindow.h  websocket_client.cpp  websocket_client.h
include/: audio_processor.h  benchmark_manager.h  logger.h  mic_capture.h  vad.h  vstream_app.h  vstream_engine.h
src/: audio_processor.cpp  benchmark_manager.cpp  logger.cpp  main.cpp  mic_capture.cpp  vad.cpp  vstream_app.cpp  vstream_engine.cpp
tests/: test_audio_processor.cpp  test_mic_capture.cpp  test_vad.cpp  test_vstream_app.cpp  test_vstream_engine.cpp
